--- a/index.html
+++ b/index.html
@@ -1,1 +1,116 @@
-<h1>Welcome To App</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ruchi's Portfolio</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <h1>Ruchi</h1>
+            <p>Frontend Developer | HTML | CSS | JavaScript</p>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#projects">Projects</a>
+                <a href="#skills">Skills</a>
+                <a href="#education">Education</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <!-- About Section -->
+        <section id="about">
+            <div class="container">
+                <h2>About Me</h2>
+                <p>
+                    I’m Ruchi, a Frontend Developer skilled in HTML, CSS, JavaScript, and frameworks like React.
+                    I focus on creating responsive, user-friendly interfaces and optimizing web performance. Passionate
+                    about
+                    clean code and great design, I’m constantly learning to deliver seamless web experiences.
+                </p>
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+        <section id="projects">
+            <div class="container">
+                <h2>Projects</h2>
+                <div class="project-card">
+                    <h3>Facebook Clone Login Page</h3>
+                    <p>Recreated Facebook login page using HTML and CSS, ensuring responsive design and cross-device
+                        compatibility.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Airbnb Clone (Group Project)</h3>
+                    <p>
+                        Developed with the MERN Stack & Bootstrap. This project recreates the core functionality of
+                        Airbnb.
+                        Contributed as a frontend developer to create user-friendly interfaces.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Skills Section -->
+        <section id="skills">
+            <div class="container">
+                <h2>Skills</h2>
+                <div class="skills-grid">
+                    <div>
+                        <h3>Technologies</h3>
+                        <p>JavaScript (ES6+), CSS, HTML</p>
+                    </div>
+                    <div>
+                        <h3>Tools</h3>
+                        <p>Git, GitHub, Visual Studio Code</p>
+                    </div>
+                    <div>
+                        <h3>Soft Skills</h3>
+                        <p>Problem Solving, Time Management</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Education Section -->
+        <section id="education">
+            <div class="container">
+                <h2>Education</h2>
+                <ul>
+                    <li><strong>B.Tech in Computer Science</strong> - Maharaja Agrasen College (2021–2024), CGPA: 7.6/10
+                    </li>
+                    <li><strong>Diploma in Electronics Engineering</strong> - Mahamaya Polytechnic (2017–2020), Marks:
+                        79.86%</li>
+                    <li><strong>XII (UP Board)</strong> - A.N.D.P. Inter College (2015–2017), Marks: 80.40%</li>
+                    <li><strong>X (UP Board)</strong> - A.N.D.P. Inter College (2014–2015), Marks: 79.50%</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact">
+            <div class="container">
+                <h2>Contact</h2>
+                <div class="contact-details">
+                    <p>Email: <a href="mailto:ruchiarya4215@gmail.com">ruchiarya4215@gmail.com</a></p>
+                    <p>Phone: 8923917689</p>
+                    <p>LinkedIn: <a href="https://linkedin.com/in/ruchi789/">linkedin.com/in/ruchi789</a></p>
+                    <p>GitHub: <a href="https://github.com/aryaruchi">github.com/aryaruchi</a></p>
+                    <p>Portfolio: <a href="https://aryaruchi.github.io/">aryaruchi.github.io</a></p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2024 Ruchi | All Rights Reserved</p>
+    </footer>
+</body>
+
+</html>
